# SUNRGBDtoolbox_python

./: .gitmodules  Readme.md  demo.py  getSequenceName.py  readframeSUNRGBD.py
draw/: drawRoom.py  drawSeg.py  draw_square_3d.py  myObjectColor.py  plotcube.py  vis_cube.py  vis_line.py  vis_point_cloud.py  visualize_wholeroom.py
mBB/: bb3dOverlaCloseForm.py  create_bounding_box_3d.py  cuboidVolume.py  get_corners_of_bb3d.py  project3dPtsTo2d.py  projectStructBbsTo2d.py
mBB/cuboidIntersectionVolume_src/: CMakeLists.txt  cuboidIntersectionVolume.cpp  test.cpp
mBB/cuboidIntersectionVolume_src/gpc/: gpc.c  gpc.h
readData/: read3dPoints.py  read_3d_pts_general.py
